<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity"
  android:orientation="horizontal">


  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/iv_slogan"
      android:layout_margin="4dp"
      android:layout_marginTop="5dp"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:scaleType="centerInside"
      android:src="@drawable/sonic_button_round_mask" />

    <LinearLayout
      android:id="@+id/content"
      android:layout_below="@id/iv_slogan"
      android:layout_above="@+id/tv_vas_team"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <Button
        android:id="@+id/btn_web_view"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:onClick="btn_web_view"
        android:text="webView跳转" />

      <Button
        android:id="@+id/btn_check_permisson_ok"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="确认授权" />

      <Button
        android:id="@+id/btn_upload_activity"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:onClick="btn_upload_activity"
        android:text="手机信息上传测试" />

      <Button
        android:id="@+id/btn_default_mode"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:text="@string/default_no_sonic" />

      <Button
        android:id="@+id/btn_device_info"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="获取设备信息" />

      <Button
        android:id="@+id/btn_local"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="本地调试" />

      <Button
        android:id="@+id/btn_insert"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:text="写入数据" />

      <Button
        android:id="@+id/btn_query"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="获取数据" />

      <Button
        android:id="@+id/btn_camera"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:onClick="btn_web_view"
        android:text="打开相机" />

      <Button
        android:id="@+id/btn_gallery"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:onClick="btn_web_view"
        android:text="打开相册" />

      <Button
        android:id="@+id/btn_open_login"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="打开登录页" />

      <Button
        android:id="@+id/btn_logout"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="退出登录" />

      <Button
        android:id="@+id/btn_open_code"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="打开验证码页" />

      <Button
        android:id="@+id/btn_track_data"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="数据上报" />

      <Button
        android:id="@+id/btn_get_storage_data"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="获取缓存数据" />

      <Button
        android:id="@+id/btn_sonic"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:text="@string/sonic" />

      <Button
        android:id="@+id/btn_sonic_preload"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:text="@string/sonic_preload"
        />

      <Button
        android:id="@+id/btn_sonic_with_offline"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:text="@string/sonic_offline"
        />

      <Button
        android:id="@+id/btn_reset"
        style="@style/SonicButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:text="@string/reset_clear"
        />
    </LinearLayout>

    <TextView
      android:id="@+id/tv_vas_team"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="tv_vas_team"
      android:layout_margin="30dp"
      android:layout_centerHorizontal="true"
      android:layout_alignParentBottom="true"/>
  </RelativeLayout>

  <Button
    android:id="@+id/btn_fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_margin="16dp"
    app:srcCompat="@android:drawable/ic_dialog_info" />

</LinearLayout>